# SisOSMP

./: .gitignore  README.md  app.py  container.py  example.env  main.py  mainController.py  pyproject.toml  requirements.txt  routes.py  telaClienteVeiculo.py  telaEditarOrcamento.py
controller/: cidadeController.py  clienteController.py  mainController.py  marcaController.py  orcamentoController.py  pecaController.py  servicoController.py  veiculoController.py
model/: modelo.py
repository/: cidadeRepository.py  clienteRepository.py  foneRepository.py  itemPecaRepository.py  itemServicoRepository.py  marcaRepository.py  orcamentoRepository.py  pecaRepository.py  servicoRepository.py  veiculoClienteRepository.py  veiculoRepository.py
resources/: styles.qss  telaCadastroOrcamento.py  telaOrçamento.ui
tests/: control.py  main.py  menu copy.py  menu_copy.py  orcamento.py  principal_menu.ui
ui/: explanationBalloon.py  help.py  helpMessageBox.py  hoverButton.py  infiniteScroll.py  janelaPrincipal.py  messageBox.py  styles.qss  telaBuscaCliente.py  telaBuscaVeiculo.py  telaCadastroCliente.py  telaCadastroOrcamento.py  telaCadastroPeca.py  telaCadastroServico.py  telaClienteVeiculo.py  telaConsulta.py  telaConsultaAux.py  telaConsultaCliente.py  telaConsultaOS.py  telaConsultaOrcamento.py  telaConsultaPeca.py  telaConsultaPecaServico.py  telaConsultaServico.py  telaConsultaVeiculo.py  telaEditarCliente.py  telaEditarMarca.py  telaEditarOS.py  telaEditarOrcamento.py  telaEditarPeca.py  telaEditarServico.py  telaEditarVeiculo.py  telaInicial.py  telaMarcas.py  (+1 more)
(+5 files in other folders)
